# COSMA

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  A0.txt  A1.txt  A2.txt  A3.txt  ATTRIBUTIONS.md  B0.txt  B1.txt  B2.txt  B3.txt  C0.txt  C1.txt  C2.txt  C3.txt  CMakeLists copy.txt  CMakeLists.txt  INSTALL.md  Jenkinsfile  LICENCE  LICENSE  README.md  a.out  bench.txt  bors.toml  carma.txt  scalapack.txt  slurm-9362785.out
.github/: tag-issue.md
benchmarks/: CMakeLists.txt  bcast-volume.cpp  blocking_vs_non_blocking.cpp  dgemm_perf_model.cpp  gpu_gemm_cublas.cpp  reduce-scatter.cpp  scalapack_transformer.cpp  sendrecv.cpp  transpose.cpp  ubench-allgather.cpp
changelog/: 2025-01-27-phase2-tiled-mm-integration-status.md  2025-01-30-phase4-cosma-integration-complete.md  2025-10-19-openblas-native-bf16-implementation.md  2025-10-19-tiled-mm-upstream-pr.md
ci/: baseimage.cpu.Fedora37.Dockerfile  baseimage.cuda.Dockerfile  build.Dockerfile  (+8 more)
libs/costa/: CMakeLists.txt  INSTALL.md  README.md
libs/costa/cmake/: FindCRAY_LIBSCI.cmake  FindMKL.cmake  build_type.cmake  costa.pc.in  costaConfig.cmake.in
libs/costa/examples/: CMakeLists.txt  example0.cpp  example1.cpp
libs/costa/libs/cxxopts/: CMakeLists.txt
libs/costa/libs/semiprof/examples/: CMakeLists.txt  omp.cpp
libs/costa/libs/semiprof/src/: profiler.cpp
libs/costa/miniapps/: CMakeLists.txt  block_cyclic.cpp  comm_volume.cpp  pxgemr2d_miniapp.cpp  pxtran_miniapp.cpp
libs/costa/src/costa/: CMakeLists.txt  blacs.hpp  layout.cpp  layout.hpp  random_generator.hpp  scalapack.cpp  scalapack.hpp
libs/costa/src/costa/cinterface/: transform.cpp  transform.hpp
libs/costa/src/costa/grid2grid/: block.cpp  block.hpp  cantor_mapping.hpp  comm_volume.hpp  communication_data.cpp  communication_data.hpp  grid2D.cpp  grid2D.hpp  grid_cover.cpp  grid_cover.hpp  grid_layout.hpp  interval.cpp  interval.hpp  memory_utils.hpp  mpi_type_wrapper.hpp  profiler.hpp  ranks_reordering.cpp  ranks_reordering.hpp  replace.py  scalapack_layout.cpp  scalapack_layout.hpp  tiling_manager.hpp  transform.cpp  transform.hpp  transformer.hpp  utils.hpp
libs/costa/src/costa/pxgemr2d/: costa_pxgemr2d.cpp  costa_pxgemr2d.hpp  prefixed_pxgemr2d.cpp  prefixed_pxgemr2d.h  pxgemr2d.cpp  pxgemr2d.h  pxgemr2d_params.hpp
libs/costa/src/costa/pxtran/: costa_pxtran.cpp  costa_pxtran.hpp  prefixed_pxtran.cpp  prefixed_pxtran.h  pxtran.cpp  pxtran.h  pxtran_params.hpp
libs/costa/utils/: general.hpp  pxgemr2d_utils.hpp  pxtran_utils.hpp
libs/gtest/: CMakeLists.txt  gtest-all.cpp
libs/gtest/gtest_mpi/: README.md  gtest_mpi.hpp  gtest_mpi_internal.hpp
libs/gtest_mpi/: CMakeLists.txt  LICENSE  README.md
libs/gtest_mpi/include/gtest_mpi/: gtest_mpi.hpp  gtest_mpi_internal.hpp
libs/semiprof/: CMakeLists.txt  LICENSE
libs/semiprof/include/semiprof/: semiprof.hpp
miniapp/: CMakeLists.txt  blacs_test.cpp  blocking_vs_non_blocking.cpp  carma-miniapp.cpp  carma-statistics.cpp  cosma-miniapp.cpp  cosma-statistics.cpp  cosma_miniapp.cpp  cosma_statistics.cpp  cuda_test.cpp  layout_miniapp.cpp  mpi_bug.cpp  parse_strategy.hpp  pdgemm-detailed-miniapp.cpp  pdgemm-miniapp.cpp  pdgemm_miniapp.cpp  pgemm-miniapp.cpp  pgemm.cpp  pxgemm_miniapp.cpp  run_statistics.sh  scalars_miniapp.cpp  temp-miniapp.cpp  test-strategy.cpp
profiler/: CMakeLists.txt  README.md  example.cpp  profiler.cpp  semiprof.hpp  timer.cpp  timer.h  todo.md
profiler/examples/: CMakeLists.txt
profiler/src/: profiler.cpp
src/: CMakeLists.txt  allocator.hpp  blas.h  buffer.cpp  buffer.hpp  carma.cpp  carma.h  carma.hpp  cmd_parser.cpp  cmd_parser.h  communication.cpp  communication.h  communication.hpp  communicator.cpp  communicator.hpp  context.cpp  context.hpp  hybrid_communicator.hpp  interval.cpp  interval.hpp  layout.cpp  layout.hpp  layout_transform.h  library.cpp  library.h  local_multiply.cpp  local_multiply.hpp  mapper.cpp  mapper.hpp  math_utils.cpp  math_utils.hpp  matrix.cpp  matrix.hpp  mpi_allocator.hpp  multiply.cpp  multiply.hpp  one_sided_communicator.hpp  options.cpp  options.hpp  pdgemm_wrapper.hpp  (+13 more)
src/cosma/: CMakeLists.txt  aligned_allocator.hpp  bfloat16.hpp  blacs.hpp  blas.cpp  blas.h  blas.hpp  buffer.cpp  buffer.hpp  cinterface.cpp  cinterface.hpp  communicator.cpp  communicator.hpp  context.cpp  context.hpp  cosma_pxgemm.cpp  cosma_pxgemm.hpp  environment_variables.cpp  environment_variables.hpp  fast_vector.cpp  fast_vector.hpp  hybrid_communicator.hpp  interpose.h  interval.cpp  interval.hpp  layout.cpp  layout.hpp  local_multiply.cpp  local_multiply.hpp  main_allocator.hpp  mapper.cpp  mapper.hpp  math_utils.cpp  math_utils.hpp  matrix.cpp  matrix.hpp  memory_pool.cpp  memory_pool.hpp  mpi_allocator.hpp  mpi_attribute.cpp  (+32 more)
src/cosma/gpu/: gpu_aware_mpi_utils.cpp  gpu_aware_mpi_utils.hpp  gpu_runtime_api.hpp  nccl_mapper.hpp  nccl_utils.cpp  nccl_utils.hpp  utils.cpp  utils.hpp
src/gpu/: cublas_handle.hpp  cuda_allocator.hpp  cuda_event.hpp  cuda_stream.hpp  device_vector.cu  device_vector.hpp  gemm.cpp  gemm.cu  gemm.hpp  tile_description.hpp  tiled_gemm.cpp  tiled_gemm_ben.cpp  tiled_gemm_new.cpp  tiled_gemm_prev.cpp  tiled_gemm_temp.cpp  util.hpp  util_prof.hpp
tests/: CMakeLists.txt  Carma-test.cpp  benchmark_bf16_backends.cpp  cosma-pdgemm-test.cpp  cosma-run.hpp  cosma-test.cpp  cosma_pdgemm_run.hpp  cosma_pdgemm_test.cpp  cosma_run.hpp  cosma_test.cpp  main_gtest.cpp  mapper.cpp  multiply.cpp  multiply_using_layout.cpp  pdgemm.cpp  scalar_matmul.cpp  scalar_matmul.test.cpp  test_bfloat16_basic.cpp  test_bfloat16_mpi.cpp  test_mapper.cpp  test_multiply.cpp  test_pdgemm.cpp  test_strategy.cpp  unit_test.cpp  unit_test_mpi.cpp
tests/ubench/: CMakeLists.txt  allgather-volume.cpp  dgemm_perf_model.cpp  gpu_gemm_cublas.cpp  gpu_gemm_libsci_acc.cpp  reduce-scatter.cpp  run_ubench.sh  scalapack_transformer.cpp  sendrecv.cpp  test-strategy.cpp  ubench-allgather.cpp
tests/unit/: CMakeLists.txt  Carma-test.cpp  carma-test.cpp  cosma-run.hpp  cosma-test.cpp  test_mapper.cpp  test_multiply.cpp  unit_test.cpp  unit_test_mpi.cpp
(+158 files in other folders)
